--- a/machine_learning_combinatorics/feature_engineer_testing.ipynb
+++ b/machine_learning_combinatorics/feature_engineer_testing.ipynb
@@ -74,8 +74,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\projects\\experiments\\machine_learning_combinatorics\\feature_engineer.py:29: FutureWarning: reshape is deprecated and will raise in a subsequent release. Please use .values.reshape(...) instead\n",
-      "  res = o(df[c1], df[c2]).reshape(-1, 1)\n",
+      "c:\\projects\\experiments\\machine_learning_combinatorics\\feature_engineer.py:26: FutureWarning: reshape is deprecated and will raise in a subsequent release. Please use .values.reshape(...) instead\n",
+      "  res = feature['transformation_function'](df[feature['x1']], df[feature['x2']]).reshape(-1, 1)\n",
       "C:\\Users\\rossr\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
       "  'precision', 'predicted', average, warn_for)\n"
      ]
@@ -88,28 +88,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.937215909091 {'transformation_function': <function derive_feature_combinations.<locals>.<lambda> at 0x000001C9A9E06510>, 'x1': 'col_1', 'x2': 'col_3', 'column_name': 'col_1_truediv_col_3'}\n",
-      "1 0.90625 {'transformation_function': <function derive_feature_combinations.<locals>.<lambda> at 0x000001C9A9E06730>, 'x1': 'col_3', 'x2': 'col_1', 'column_name': 'col_3_sub_col_1'}\n",
-      "2 0.874431818182 {'transformation_function': <function derive_feature_combinations.<locals>.<lambda> at 0x000001C9A9E06598>, 'x1': 'col_0', 'x2': 'col_3', 'column_name': 'col_0_truediv_col_3'}\n",
-      "3 0.871527777778 {'transformation_function': <function derive_feature_combinations.<locals>.<lambda> at 0x000001C9A9E06158>, 'x1': 'col_2', 'x2': 'col_0', 'column_name': 'col_2_sub_col_0'}\n",
-      "4 0.836397058824 {'transformation_function': <function derive_feature_combinations.<locals>.<lambda> at 0x000001C9A9E060D0>, 'x1': 'col_3', 'x2': 'col_2', 'column_name': 'col_3_mul_col_2'}\n",
-      "5 0.758564814815 {'transformation_function': <function derive_feature_combinations.<locals>.<lambda> at 0x000001C9A9E06620>, 'x1': 'col_3', 'x2': 'col_0', 'column_name': 'col_3_mul_col_0'}\n",
-      "6 0.716635338346 {'transformation_function': <function derive_feature_combinations.<locals>.<lambda> at 0x000001C9A9C3ED90>, 'x1': 'col_2', 'x2': 'col_3', 'column_name': 'col_2_truediv_col_3'}\n",
-      "7 0.714285714286 {'transformation_function': <function derive_feature_combinations.<locals>.<lambda> at 0x000001C9A9E066A8>, 'x1': 'col_3', 'x2': 'col_2', 'column_name': 'col_3_add_col_2'}\n",
-      "8 0.689583333333 {'transformation_function': <function derive_feature_combinations.<locals>.<lambda> at 0x000001C9A9E06400>, 'x1': 'col_3', 'x2': 'col_1', 'column_name': 'col_3_mul_col_1'}\n",
-      "9 0.642857142857 {'transformation_function': <function derive_feature_combinations.<locals>.<lambda> at 0x000001C9A9E06488>, 'x1': 'col_2', 'x2': 'col_1', 'column_name': 'col_2_mul_col_1'}\n",
-      "10 0.616558908046 {'transformation_function': <function derive_feature_combinations.<locals>.<lambda> at 0x000001C9A9E062F0>, 'x1': 'col_3', 'x2': 'col_0', 'column_name': 'col_3_add_col_0'}\n",
-      "11 0.609375 {'transformation_function': <function derive_feature_combinations.<locals>.<lambda> at 0x000001C9A9E068C8>, 'x1': 'col_3', 'x2': 'col_1', 'column_name': 'col_3_truediv_col_1'}\n",
-      "12 0.537137681159 {'transformation_function': <function derive_feature_combinations.<locals>.<lambda> at 0x000001C9A9E067B8>, 'x1': 'col_3', 'x2': 'col_2', 'column_name': 'col_3_sub_col_2'}\n",
-      "13 0.522693452381 {'transformation_function': <function derive_feature_combinations.<locals>.<lambda> at 0x000001C9A9E061E0>, 'x1': 'col_0', 'x2': 'col_1', 'column_name': 'col_0_truediv_col_1'}\n",
-      "14 0.498768939394 {'transformation_function': <function derive_feature_combinations.<locals>.<lambda> at 0x000001C9A9E06268>, 'x1': 'col_1', 'x2': 'col_0', 'column_name': 'col_1_truediv_col_0'}\n"
+      "0 0.937215909091 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE730>, 'column_name': 'col_1_truediv_col_3', 'x1': 'col_1', 'x2': 'col_3'}\n",
+      "1 0.90625 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE950>, 'column_name': 'col_3_sub_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
+      "2 0.874431818182 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE7B8>, 'column_name': 'col_0_truediv_col_3', 'x1': 'col_0', 'x2': 'col_3'}\n",
+      "3 0.871527777778 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE378>, 'column_name': 'col_2_sub_col_0', 'x1': 'col_2', 'x2': 'col_0'}\n",
+      "4 0.836397058824 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE2F0>, 'column_name': 'col_3_mul_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
+      "5 0.758564814815 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE840>, 'column_name': 'col_3_mul_col_0', 'x1': 'col_3', 'x2': 'col_0'}\n",
+      "6 0.716635338346 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0B95048>, 'column_name': 'col_2_truediv_col_3', 'x1': 'col_2', 'x2': 'col_3'}\n",
+      "7 0.714285714286 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE8C8>, 'column_name': 'col_3_add_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
+      "8 0.689583333333 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE620>, 'column_name': 'col_3_mul_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
+      "9 0.642857142857 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE6A8>, 'column_name': 'col_2_mul_col_1', 'x1': 'col_2', 'x2': 'col_1'}\n",
+      "10 0.616558908046 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE510>, 'column_name': 'col_3_add_col_0', 'x1': 'col_3', 'x2': 'col_0'}\n",
+      "11 0.609375 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBEAE8>, 'column_name': 'col_3_truediv_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
+      "12 0.537137681159 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE9D8>, 'column_name': 'col_3_sub_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
+      "13 0.522693452381 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE400>, 'column_name': 'col_0_truediv_col_1', 'x1': 'col_0', 'x2': 'col_1'}\n",
+      "14 0.498768939394 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x00000287A0CBE488>, 'column_name': 'col_1_truediv_col_0', 'x1': 'col_1', 'x2': 'col_0'}\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -183,20 +183,20 @@
        "      <td>3.5</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>0.142857</td>\n",
+       "      <td>1.6</td>\n",
        "      <td>1.457143</td>\n",
        "      <td>0.057143</td>\n",
-       "      <td>0.274510</td>\n",
-       "      <td>0.039216</td>\n",
-       "      <td>0.039216</td>\n",
+       "      <td>-3.7</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>1.02</td>\n",
        "      <td>25.5</td>\n",
        "      <td>0.686275</td>\n",
-       "      <td>0.400000</td>\n",
-       "      <td>0.142857</td>\n",
-       "      <td>0.057143</td>\n",
-       "      <td>0.057143</td>\n",
+       "      <td>4.90</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>-3.3</td>\n",
        "      <td>17.5</td>\n",
-       "      <td>0.142857</td>\n",
+       "      <td>-1.2</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -205,20 +205,20 @@
        "      <td>3.0</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>0.142857</td>\n",
+       "      <td>1.6</td>\n",
        "      <td>1.633333</td>\n",
        "      <td>0.066667</td>\n",
-       "      <td>0.285714</td>\n",
-       "      <td>0.040816</td>\n",
-       "      <td>0.040816</td>\n",
+       "      <td>-3.5</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>0.98</td>\n",
        "      <td>24.5</td>\n",
        "      <td>0.612245</td>\n",
-       "      <td>0.466667</td>\n",
-       "      <td>0.142857</td>\n",
-       "      <td>0.066667</td>\n",
-       "      <td>0.066667</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>-2.8</td>\n",
        "      <td>15.0</td>\n",
-       "      <td>0.142857</td>\n",
+       "      <td>-1.2</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -227,20 +227,20 @@
        "      <td>3.2</td>\n",
        "      <td>1.3</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>0.153846</td>\n",
+       "      <td>1.5</td>\n",
        "      <td>1.468750</td>\n",
        "      <td>0.062500</td>\n",
-       "      <td>0.276596</td>\n",
-       "      <td>0.042553</td>\n",
-       "      <td>0.042553</td>\n",
+       "      <td>-3.4</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>0.94</td>\n",
        "      <td>23.5</td>\n",
        "      <td>0.680851</td>\n",
-       "      <td>0.406250</td>\n",
-       "      <td>0.153846</td>\n",
-       "      <td>0.062500</td>\n",
-       "      <td>0.062500</td>\n",
+       "      <td>4.16</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>-3.0</td>\n",
        "      <td>16.0</td>\n",
-       "      <td>0.153846</td>\n",
+       "      <td>-1.1</td>\n",
        "      <td>6.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -249,20 +249,20 @@
        "      <td>3.1</td>\n",
        "      <td>1.5</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>0.133333</td>\n",
+       "      <td>1.7</td>\n",
        "      <td>1.483871</td>\n",
        "      <td>0.064516</td>\n",
-       "      <td>0.326087</td>\n",
-       "      <td>0.043478</td>\n",
-       "      <td>0.043478</td>\n",
+       "      <td>-3.1</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>0.92</td>\n",
        "      <td>23.0</td>\n",
        "      <td>0.673913</td>\n",
-       "      <td>0.483871</td>\n",
-       "      <td>0.133333</td>\n",
-       "      <td>0.064516</td>\n",
-       "      <td>0.064516</td>\n",
+       "      <td>4.65</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>-2.9</td>\n",
        "      <td>15.5</td>\n",
-       "      <td>0.133333</td>\n",
+       "      <td>-1.3</td>\n",
        "      <td>7.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -271,20 +271,20 @@
        "      <td>3.6</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>0.142857</td>\n",
+       "      <td>1.6</td>\n",
        "      <td>1.388889</td>\n",
        "      <td>0.055556</td>\n",
-       "      <td>0.280000</td>\n",
-       "      <td>0.040000</td>\n",
-       "      <td>0.040000</td>\n",
+       "      <td>-3.6</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>1.00</td>\n",
        "      <td>25.0</td>\n",
        "      <td>0.720000</td>\n",
-       "      <td>0.388889</td>\n",
-       "      <td>0.142857</td>\n",
-       "      <td>0.055556</td>\n",
-       "      <td>0.055556</td>\n",
+       "      <td>5.04</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>-3.4</td>\n",
        "      <td>18.0</td>\n",
-       "      <td>0.142857</td>\n",
+       "      <td>-1.2</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -293,32 +293,32 @@
       ],
       "text/plain": [
        "   col_0  col_1  col_2  col_3  col_3_add_col_2  col_0_truediv_col_1  \\\n",
-       "0    5.1    3.5    1.4    0.2         0.142857             1.457143   \n",
-       "1    4.9    3.0    1.4    0.2         0.142857             1.633333   \n",
-       "2    4.7    3.2    1.3    0.2         0.153846             1.468750   \n",
-       "3    4.6    3.1    1.5    0.2         0.133333             1.483871   \n",
-       "4    5.0    3.6    1.4    0.2         0.142857             1.388889   \n",
+       "0    5.1    3.5    1.4    0.2              1.6             1.457143   \n",
+       "1    4.9    3.0    1.4    0.2              1.6             1.633333   \n",
+       "2    4.7    3.2    1.3    0.2              1.5             1.468750   \n",
+       "3    4.6    3.1    1.5    0.2              1.7             1.483871   \n",
+       "4    5.0    3.6    1.4    0.2              1.6             1.388889   \n",
        "\n",
        "   col_3_truediv_col_1  col_2_sub_col_0  col_3_add_col_0  col_3_mul_col_0  \\\n",
-       "0             0.057143         0.274510         0.039216         0.039216   \n",
-       "1             0.066667         0.285714         0.040816         0.040816   \n",
-       "2             0.062500         0.276596         0.042553         0.042553   \n",
-       "3             0.064516         0.326087         0.043478         0.043478   \n",
-       "4             0.055556         0.280000         0.040000         0.040000   \n",
+       "0             0.057143             -3.7              5.3             1.02   \n",
+       "1             0.066667             -3.5              5.1             0.98   \n",
+       "2             0.062500             -3.4              4.9             0.94   \n",
+       "3             0.064516             -3.1              4.8             0.92   \n",
+       "4             0.055556             -3.6              5.2             1.00   \n",
        "\n",
        "   col_0_truediv_col_3  col_1_truediv_col_0  col_2_mul_col_1  col_3_mul_col_2  \\\n",
-       "0                 25.5             0.686275         0.400000         0.142857   \n",
-       "1                 24.5             0.612245         0.466667         0.142857   \n",
-       "2                 23.5             0.680851         0.406250         0.153846   \n",
-       "3                 23.0             0.673913         0.483871         0.133333   \n",
-       "4                 25.0             0.720000         0.388889         0.142857   \n",
+       "0                 25.5             0.686275             4.90             0.28   \n",
+       "1                 24.5             0.612245             4.20             0.28   \n",
+       "2                 23.5             0.680851             4.16             0.26   \n",
+       "3                 23.0             0.673913             4.65             0.30   \n",
+       "4                 25.0             0.720000             5.04             0.28   \n",
        "\n",
        "   col_3_mul_col_1  col_3_sub_col_1  col_1_truediv_col_3  col_3_sub_col_2  \\\n",
-       "0         0.057143         0.057143                 17.5         0.142857   \n",
-       "1         0.066667         0.066667                 15.0         0.142857   \n",
-       "2         0.062500         0.062500                 16.0         0.153846   \n",
-       "3         0.064516         0.064516                 15.5         0.133333   \n",
-       "4         0.055556         0.055556                 18.0         0.142857   \n",
+       "0             0.70             -3.3                 17.5             -1.2   \n",
+       "1             0.60             -2.8                 15.0             -1.2   \n",
+       "2             0.64             -3.0                 16.0             -1.1   \n",
+       "3             0.62             -2.9                 15.5             -1.3   \n",
+       "4             0.72             -3.4                 18.0             -1.2   \n",
        "\n",
        "   col_2_truediv_col_3  \n",
        "0                  7.0  \n",
@@ -328,7 +328,7 @@
        "4                  7.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
