--- a/machine_learning_combinatorics/feature_engineer_testing.ipynb
+++ b/machine_learning_combinatorics/feature_engineer_testing.ipynb
@@ -99,39 +99,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.937215909091 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF598>, 'column_name': 'col_1_truediv_col_3', 'x1': 'col_1', 'x2': 'col_3'}\n",
-      "1 0.90625 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF7B8>, 'column_name': 'col_3_sub_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
-      "2 0.874431818182 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF620>, 'column_name': 'col_0_truediv_col_3', 'x1': 'col_0', 'x2': 'col_3'}\n",
-      "3 0.871527777778 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF1E0>, 'column_name': 'col_2_sub_col_0', 'x1': 'col_2', 'x2': 'col_0'}\n",
-      "4 0.836397058824 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF158>, 'column_name': 'col_3_mul_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
-      "5 0.758564814815 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF6A8>, 'column_name': 'col_3_mul_col_0', 'x1': 'col_3', 'x2': 'col_0'}\n",
-      "6 0.716635338346 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BC6EE18>, 'column_name': 'col_2_truediv_col_3', 'x1': 'col_2', 'x2': 'col_3'}\n",
-      "7 0.714285714286 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF730>, 'column_name': 'col_3_add_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
-      "8 0.689583333333 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF488>, 'column_name': 'col_3_mul_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
-      "9 0.642857142857 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF510>, 'column_name': 'col_2_mul_col_1', 'x1': 'col_2', 'x2': 'col_1'}\n",
-      "10 0.616558908046 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF378>, 'column_name': 'col_3_add_col_0', 'x1': 'col_3', 'x2': 'col_0'}\n",
-      "11 0.609375 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF950>, 'column_name': 'col_3_truediv_col_1', 'x1': 'col_3', 'x2': 'col_1'}\n",
-      "12 0.537137681159 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF840>, 'column_name': 'col_3_sub_col_2', 'x1': 'col_3', 'x2': 'col_2'}\n",
-      "13 0.522693452381 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF268>, 'column_name': 'col_0_truediv_col_1', 'x1': 'col_0', 'x2': 'col_1'}\n",
-      "14 0.498768939394 {'transformation_function': <function compose_feature.<locals>.<lambda> at 0x000002042BDEF2F0>, 'column_name': 'col_1_truediv_col_0', 'x1': 'col_1', 'x2': 'col_0'}\n"
+      "0 0.937215909091 col_1_truediv_col_3\n",
+      "1 0.90625 col_3_sub_col_1\n",
+      "2 0.874431818182 col_0_truediv_col_3\n",
+      "3 0.871527777778 col_2_sub_col_0\n",
+      "4 0.867904589372 max_(col_2)_sub_col_2\n",
+      "5 0.836397058824 col_3_mul_col_2\n",
+      "6 0.836250783208 max_(col_3)_sub_col_3\n",
+      "7 0.798978365385 max_(col_2)_truediv_col_2\n",
+      "8 0.793648097826 min_(col_0)_sub_col_2\n",
+      "9 0.790364583333 min_(col_1)_sub_col_3\n",
+      "10 0.758564814815 col_3_mul_col_0\n",
+      "11 0.716635338346 col_2_truediv_col_3\n",
+      "12 0.714285714286 col_3_add_col_2\n",
+      "13 0.699821428571 max_(col_2)_sub_col_0\n",
+      "14 0.689583333333 col_3_mul_col_1\n"
      ]
     }
    ],
    "source": [
     "for i, s in enumerate(sorted(eng.best_columns, reverse = True)):\n",
-    "    print(i, s, eng.best_columns[s])"
+    "    print(i, s, eng.best_columns[s]['column_name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -170,20 +170,20 @@
        "      <th>col_1</th>\n",
        "      <th>col_2</th>\n",
        "      <th>col_3</th>\n",
+       "      <th>max_(col_2)_sub_col_0</th>\n",
+       "      <th>max_(col_2)_sub_col_2</th>\n",
+       "      <th>max_(col_2)_truediv_col_2</th>\n",
        "      <th>col_3_add_col_2</th>\n",
-       "      <th>col_0_truediv_col_1</th>\n",
-       "      <th>col_3_truediv_col_1</th>\n",
-       "      <th>col_2_sub_col_0</th>\n",
-       "      <th>col_3_add_col_0</th>\n",
-       "      <th>col_3_mul_col_0</th>\n",
-       "      <th>col_0_truediv_col_3</th>\n",
-       "      <th>col_1_truediv_col_0</th>\n",
-       "      <th>col_2_mul_col_1</th>\n",
-       "      <th>col_3_mul_col_2</th>\n",
-       "      <th>col_3_mul_col_1</th>\n",
        "      <th>col_3_sub_col_1</th>\n",
+       "      <th>min_(col_0)_sub_col_2</th>\n",
+       "      <th>col_3_mul_col_0</th>\n",
+       "      <th>min_(col_1)_sub_col_3</th>\n",
+       "      <th>max_(col_3)_sub_col_3</th>\n",
+       "      <th>col_3_mul_col_2</th>\n",
+       "      <th>col_2_sub_col_0</th>\n",
+       "      <th>col_0_truediv_col_3</th>\n",
+       "      <th>col_3_mul_col_1</th>\n",
        "      <th>col_1_truediv_col_3</th>\n",
-       "      <th>col_3_sub_col_2</th>\n",
        "      <th>col_2_truediv_col_3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -194,20 +194,20 @@
        "      <td>3.5</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>4.928571</td>\n",
        "      <td>1.6</td>\n",
-       "      <td>1.457143</td>\n",
-       "      <td>0.057143</td>\n",
-       "      <td>-3.7</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>1.02</td>\n",
-       "      <td>25.5</td>\n",
-       "      <td>0.686275</td>\n",
-       "      <td>4.90</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.70</td>\n",
        "      <td>-3.3</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>1.02</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>-3.7</td>\n",
+       "      <td>25.5</td>\n",
+       "      <td>0.70</td>\n",
        "      <td>17.5</td>\n",
-       "      <td>-1.2</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -216,20 +216,20 @@
        "      <td>3.0</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>4.928571</td>\n",
        "      <td>1.6</td>\n",
-       "      <td>1.633333</td>\n",
-       "      <td>0.066667</td>\n",
-       "      <td>-3.5</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>0.98</td>\n",
-       "      <td>24.5</td>\n",
-       "      <td>0.612245</td>\n",
-       "      <td>4.20</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.60</td>\n",
        "      <td>-2.8</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>-3.5</td>\n",
+       "      <td>24.5</td>\n",
+       "      <td>0.60</td>\n",
        "      <td>15.0</td>\n",
-       "      <td>-1.2</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -238,20 +238,20 @@
        "      <td>3.2</td>\n",
        "      <td>1.3</td>\n",
        "      <td>0.2</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>5.307692</td>\n",
        "      <td>1.5</td>\n",
-       "      <td>1.468750</td>\n",
-       "      <td>0.062500</td>\n",
-       "      <td>-3.4</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>23.5</td>\n",
-       "      <td>0.680851</td>\n",
-       "      <td>4.16</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>0.64</td>\n",
        "      <td>-3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>-3.4</td>\n",
+       "      <td>23.5</td>\n",
+       "      <td>0.64</td>\n",
        "      <td>16.0</td>\n",
-       "      <td>-1.1</td>\n",
        "      <td>6.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -260,20 +260,20 @@
        "      <td>3.1</td>\n",
        "      <td>1.5</td>\n",
        "      <td>0.2</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>4.600000</td>\n",
        "      <td>1.7</td>\n",
-       "      <td>1.483871</td>\n",
-       "      <td>0.064516</td>\n",
-       "      <td>-3.1</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>0.92</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>0.673913</td>\n",
-       "      <td>4.65</td>\n",
-       "      <td>0.30</td>\n",
-       "      <td>0.62</td>\n",
        "      <td>-2.9</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>-3.1</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0.62</td>\n",
        "      <td>15.5</td>\n",
-       "      <td>-1.3</td>\n",
        "      <td>7.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -282,20 +282,20 @@
        "      <td>3.6</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>4.928571</td>\n",
        "      <td>1.6</td>\n",
-       "      <td>1.388889</td>\n",
-       "      <td>0.055556</td>\n",
-       "      <td>-3.6</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>0.720000</td>\n",
-       "      <td>5.04</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.72</td>\n",
        "      <td>-3.4</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>-3.6</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.72</td>\n",
        "      <td>18.0</td>\n",
-       "      <td>-1.2</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -303,33 +303,40 @@
        "</div>"
       ],
       "text/plain": [
-       "   col_0  col_1  col_2  col_3  col_3_add_col_2  col_0_truediv_col_1  \\\n",
-       "0    5.1    3.5    1.4    0.2              1.6             1.457143   \n",
-       "1    4.9    3.0    1.4    0.2              1.6             1.633333   \n",
-       "2    4.7    3.2    1.3    0.2              1.5             1.468750   \n",
-       "3    4.6    3.1    1.5    0.2              1.7             1.483871   \n",
-       "4    5.0    3.6    1.4    0.2              1.6             1.388889   \n",
+       "   col_0  col_1  col_2  col_3  max_(col_2)_sub_col_0  max_(col_2)_sub_col_2  \\\n",
+       "0    5.1    3.5    1.4    0.2                    1.8                    5.5   \n",
+       "1    4.9    3.0    1.4    0.2                    2.0                    5.5   \n",
+       "2    4.7    3.2    1.3    0.2                    2.2                    5.6   \n",
+       "3    4.6    3.1    1.5    0.2                    2.3                    5.4   \n",
+       "4    5.0    3.6    1.4    0.2                    1.9                    5.5   \n",
        "\n",
-       "   col_3_truediv_col_1  col_2_sub_col_0  col_3_add_col_0  col_3_mul_col_0  \\\n",
-       "0             0.057143             -3.7              5.3             1.02   \n",
-       "1             0.066667             -3.5              5.1             0.98   \n",
-       "2             0.062500             -3.4              4.9             0.94   \n",
-       "3             0.064516             -3.1              4.8             0.92   \n",
-       "4             0.055556             -3.6              5.2             1.00   \n",
+       "   max_(col_2)_truediv_col_2  col_3_add_col_2  col_3_sub_col_1  \\\n",
+       "0                   4.928571              1.6             -3.3   \n",
+       "1                   4.928571              1.6             -2.8   \n",
+       "2                   5.307692              1.5             -3.0   \n",
+       "3                   4.600000              1.7             -2.9   \n",
+       "4                   4.928571              1.6             -3.4   \n",
        "\n",
-       "   col_0_truediv_col_3  col_1_truediv_col_0  col_2_mul_col_1  col_3_mul_col_2  \\\n",
-       "0                 25.5             0.686275             4.90             0.28   \n",
-       "1                 24.5             0.612245             4.20             0.28   \n",
-       "2                 23.5             0.680851             4.16             0.26   \n",
-       "3                 23.0             0.673913             4.65             0.30   \n",
-       "4                 25.0             0.720000             5.04             0.28   \n",
+       "   min_(col_0)_sub_col_2  col_3_mul_col_0  min_(col_1)_sub_col_3  \\\n",
+       "0                    2.9             1.02                    1.8   \n",
+       "1                    2.9             0.98                    1.8   \n",
+       "2                    3.0             0.94                    1.8   \n",
+       "3                    2.8             0.92                    1.8   \n",
+       "4                    2.9             1.00                    1.8   \n",
        "\n",
-       "   col_3_mul_col_1  col_3_sub_col_1  col_1_truediv_col_3  col_3_sub_col_2  \\\n",
-       "0             0.70             -3.3                 17.5             -1.2   \n",
-       "1             0.60             -2.8                 15.0             -1.2   \n",
-       "2             0.64             -3.0                 16.0             -1.1   \n",
-       "3             0.62             -2.9                 15.5             -1.3   \n",
-       "4             0.72             -3.4                 18.0             -1.2   \n",
+       "   max_(col_3)_sub_col_3  col_3_mul_col_2  col_2_sub_col_0  \\\n",
+       "0                    2.3             0.28             -3.7   \n",
+       "1                    2.3             0.28             -3.5   \n",
+       "2                    2.3             0.26             -3.4   \n",
+       "3                    2.3             0.30             -3.1   \n",
+       "4                    2.3             0.28             -3.6   \n",
+       "\n",
+       "   col_0_truediv_col_3  col_3_mul_col_1  col_1_truediv_col_3  \\\n",
+       "0                 25.5             0.70                 17.5   \n",
+       "1                 24.5             0.60                 15.0   \n",
+       "2                 23.5             0.64                 16.0   \n",
+       "3                 23.0             0.62                 15.5   \n",
+       "4                 25.0             0.72                 18.0   \n",
        "\n",
        "   col_2_truediv_col_3  \n",
        "0                  7.0  \n",
@@ -339,7 +346,7 @@
        "4                  7.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -360,25 +367,25 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 150 entries, 0 to 149\n",
       "Data columns (total 19 columns):\n",
-      "col_0                  150 non-null float64\n",
-      "col_1                  150 non-null float64\n",
-      "col_2                  150 non-null float64\n",
-      "col_3                  150 non-null float64\n",
-      "col_3_add_col_2        150 non-null float64\n",
-      "col_0_truediv_col_1    150 non-null float64\n",
-      "col_3_truediv_col_1    150 non-null float64\n",
-      "col_2_sub_col_0        150 non-null float64\n",
-      "col_3_add_col_0        150 non-null float64\n",
-      "col_3_mul_col_0        150 non-null float64\n",
-      "col_0_truediv_col_3    150 non-null float64\n",
-      "col_1_truediv_col_0    150 non-null float64\n",
-      "col_2_mul_col_1        150 non-null float64\n",
-      "col_3_mul_col_2        150 non-null float64\n",
-      "col_3_mul_col_1        150 non-null float64\n",
-      "col_3_sub_col_1        150 non-null float64\n",
-      "col_1_truediv_col_3    150 non-null float64\n",
-      "col_3_sub_col_2        150 non-null float64\n",
-      "col_2_truediv_col_3    150 non-null float64\n",
+      "col_0                        150 non-null float64\n",
+      "col_1                        150 non-null float64\n",
+      "col_2                        150 non-null float64\n",
+      "col_3                        150 non-null float64\n",
+      "max_(col_2)_sub_col_0        150 non-null float64\n",
+      "max_(col_2)_sub_col_2        150 non-null float64\n",
+      "max_(col_2)_truediv_col_2    150 non-null float64\n",
+      "col_3_add_col_2              150 non-null float64\n",
+      "col_3_sub_col_1              150 non-null float64\n",
+      "min_(col_0)_sub_col_2        150 non-null float64\n",
+      "col_3_mul_col_0              150 non-null float64\n",
+      "min_(col_1)_sub_col_3        150 non-null float64\n",
+      "max_(col_3)_sub_col_3        150 non-null float64\n",
+      "col_3_mul_col_2              150 non-null float64\n",
+      "col_2_sub_col_0              150 non-null float64\n",
+      "col_0_truediv_col_3          150 non-null float64\n",
+      "col_3_mul_col_1              150 non-null float64\n",
+      "col_1_truediv_col_3          150 non-null float64\n",
+      "col_2_truediv_col_3          150 non-null float64\n",
       "dtypes: float64(19)\n",
       "memory usage: 22.3 KB\n"
      ]
@@ -390,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -401,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +420,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -436,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
